objects/EXPRN__NetConnect_Configuration__c.object
<CustomObject>
    <description>This object is used to select a particular request Template for different kind of reports.</description>
    <fields>
        <fullName>EXPRN__BIQ_Configuration_Name__c</fullName>
        <label>BIQ Configuration Name</label>
        <referenceTo>EXPRN__BIQ_Configuration__c</referenceTo>
        <relationshipLabel>NetConnect Configurations</relationshipLabel>
        <relationshipName>NetConnect_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXPRN__End_Point_URL__c</fullName>
        <label>End Point URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__Product_Number__c</fullName>
        <externalId>true</externalId>
        <label>Product Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Report_with_Decision_URL__c</fullName>
        <description>Report with decision URL</description>
        <label>Report with Decision URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Request_Template__c</fullName>
        <label>Request Template</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__XSLT_Href__c</fullName>
        <label>XSLT Href</label>
        <type>TextArea</type>
    </fields>
    <label>NetConnect Configuration</label>
    <nameField>
        <label>NetConnect Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetConnect Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>